--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "ext/doxygen-awesome-css"]
 	path = ext/doxygen-awesome-css
 	url = https://github.com/jothepro/doxygen-awesome-css.git
+[submodule "ext/codipack"]
+	path = ext/codipack
+	url = git@github.com:SciCompKL/CoDiPack.git
