--- a/interfaces/sourcegen/src/sourcegen/clib/config.yaml
+++ b/interfaces/sourcegen/src/sourcegen/clib/config.yaml
@@ -18,10 +18,10 @@ ret_type_crosswalk:
   int: int32_t
   size_t: int32_t
   shared_ptr<T>: int32_t
-  double: double
-  double*: double*
-  const double: double*
-  vector<double>: double*
+  CanteraDouble: double
+  CanteraDouble*: double*
+  const CanteraDouble: double*
+  vector<CanteraDouble>: double*
   string: char*
 
 # Parameter type crosswalks
@@ -33,9 +33,9 @@ par_type_crosswalk:
   int*: int32_t*
   vector<int>: int32_t*
   vector<shared_ptr<T>>: int32_t*
-  double: double
-  double*: double*
-  vector<double>: double*
+  CanteraDouble: double
+  CanteraDouble*: double*
+  vector<CanteraDouble>: double*
   string: char*
 
 # Cabinets with associated preambles (headers)
