--- a/interfaces/sourcegen/src/sourcegen/headers/ctfunc.yaml
+++ b/interfaces/sourcegen/src/sourcegen/headers/ctfunc.yaml
@@ -8,13 +8,13 @@ base: Func1
 recipes:
 - name: checkFunc1  # Renamed in Cantera 3.2 (previously check)
 - name: newBasic  # Renamed in Cantera 3.2 (previously new_basic)
-  wraps: newFunc1(const string&, double)
+  wraps: newFunc1(const string&, CanteraDouble)
 - name: newAdvanced  # Renamed in Cantera 3.2 (previously new_advanced)
-  wraps: newFunc1(const string&, const vector<double>&)
+  wraps: newFunc1(const string&, const vector<CanteraDouble>&)
 - name: newCompound  # Renamed in Cantera 3.2 (previously new_compound)
   wraps: newFunc1(const string&, const shared_ptr<Func1>, const shared_ptr<Func1>)
 - name: newModified  # Renamed in Cantera 3.2 (previously new_modified)
-  wraps: newFunc1(const string&, const shared_ptr<Func1>, double)
+  wraps: newFunc1(const string&, const shared_ptr<Func1>, CanteraDouble)
 - name: newSumFunction  # Renamed in Cantera 3.2 (previously new_sum)
 - name: newDiffFunction  # Renamed in Cantera 3.2 (previously new_diff)
 - name: newProdFunction   # Renamed in Cantera 3.2 (previously new_prod)
